network-policy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
