network-policy/cilium-network-policy.yaml
---
kind: CiliumNetworkPolicy
apiVersion: "cilium.io/v2"
metadata:
  name: allow-external-ip-ingress
spec:
  endpointSelector:
    matchLabels:
      app: hello
  ingress:
  - fromCIDR:
    - $ALLOWED_IP/32
    fromPorts:
    - ports:
      - port: "30000"
        protocol: TCP
